2009-05-02  Dan Fandrich <dan@coneharvesters.com>

	* Added contrib/examples/write-exif.c

2009-03-21  Lutz Mueller <lutz@users.sourceforge.net>

	Meder Kydyraliev <meder.k@gmail.com> suggested to add some sanity
	checks:

	* libexif/exif-data.c (exif_data_load_entry),
	  (exif_data_load_data_thumbnail)
	* libexif/canon/exif_mnote-data-canon.c
          (exif_mnote_data_canon_load)
	* libexif/fuji/exif-mnote-data-fuji.c
	  (exif_mnote_data_fuji_load)
	* libexif/olympus/exif-mnote-data-olympus.c
          (exif_mnote_data_olympus_load)
	* libexif/pentax/exif-mnote-data-pentax.c
	  (exif_mnote_data_pentax_load)

2009-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/canon/exif-mnote-data-canon.c:
          (exif_mnote_data_canon_load): Fix the coding style in this function
	  to make it easier to read.

2009-02-02  Dan Fandrich <dan@coneharvesters.com>

	* Added AC_C_INLINE to configure.ac to define the inline keyword
	  if the compiler doesn't handle it already.

2009-01-28  Dan Fandrich <dan@coneharvesters.com>

	* Decode the value for EXIF_TAG_LIGHT_SOURCE and EXIF_TAG_SCENE_TYPE
	* Split out the generic ExifEntry formatting code into a new function
	  exif_entry_format_value()
	* Fixed some signed vs unsigned formatting errors
	* Format the EXIF_TAG_GPS_TIME_STAMP & EXIF_TAG_GPS_ALTITUDE_REF tags
	* Improved the wrong data type fixup
	* Separated the MNOTE_SANYO_TAG_SELFTIMER 2 sec. case from the other
	  On/Off cases
	* Renamed MNOTE_NIKON_TAG_PREVIEWIMAGE_IFD_POINTERS to show that it's 
	  an IFD. The case of IFDs in MakerNotes needs to be handled better
	  because right now, those MakerNote IFD tags are corrupted since
	  the sub-IFDs aren't being read and written.

2009-01-22  Dan Fandrich <dan@coneharvesters.com>

	* Fix exif_tag_get_support_level_in_ifd() to handle the case where two
	  tags with the same number exist in different IFDs.
	* Added test-tagtable to do some tests on the static EXIF tag
	  information table.
